made code more efficient by using sqlalchemy

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -2693,9 +2693,10 @@
     "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation\n",
     "trip_range = ['2011-02-28', '2011-03-05']\n",
     "\n",
-    "trip_precipitation = session.query(Measurement.station, func.sum(Measurement.prcp)).\\\n",
+    "trip_precipitation = session.query(Measurement.station, func.sum(Measurement.prcp), Station.latitude, Station.longitude, Station.elevation).\\\n",
     "                    filter(Measurement.date >= trip_range[0]).\\\n",
     "                    filter(Measurement.date <= trip_range[-1]).\\\n",
+    "                    filter(Measurement.station == Station.station).\\\n",
     "                    group_by(Measurement.station).\\\n",
     "                    order_by(func.sum(Measurement.prcp).desc()).all()\n",
     "trip_precipitation\n"
@@ -2800,326 +2801,8 @@
     }
    ],
    "source": [
-    "trip_precipitation_df = pd.DataFrame(trip_precipitation, columns=[\"station\", \"precipitation (in)\"])\n",
+    "trip_precipitation_df = pd.DataFrame(trip_precipitation, columns=[\"station\", \"precipitation (in)\", \"latitude\", \"longitude\", \"elevation\"])\n",
     "trip_precipitation_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>station</th>\n",
-       "      <th>name</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>elevation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>WAIKIKI 717.2, HI US</td>\n",
-       "      <td>21.27160</td>\n",
-       "      <td>-157.81680</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>USC00513117</td>\n",
-       "      <td>KANEOHE 838.1, HI US</td>\n",
-       "      <td>21.42340</td>\n",
-       "      <td>-157.80150</td>\n",
-       "      <td>14.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>USC00514830</td>\n",
-       "      <td>KUALOA RANCH HEADQUARTERS 886.9, HI US</td>\n",
-       "      <td>21.52130</td>\n",
-       "      <td>-157.83740</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>USC00517948</td>\n",
-       "      <td>PEARL CITY, HI US</td>\n",
-       "      <td>21.39340</td>\n",
-       "      <td>-157.97510</td>\n",
-       "      <td>11.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>USC00518838</td>\n",
-       "      <td>UPPER WAHIAWA 874.3, HI US</td>\n",
-       "      <td>21.49920</td>\n",
-       "      <td>-158.01110</td>\n",
-       "      <td>306.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>USC00519523</td>\n",
-       "      <td>WAIMANALO EXPERIMENTAL FARM, HI US</td>\n",
-       "      <td>21.33556</td>\n",
-       "      <td>-157.71139</td>\n",
-       "      <td>19.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>USC00519281</td>\n",
-       "      <td>WAIHEE 837.5, HI US</td>\n",
-       "      <td>21.45167</td>\n",
-       "      <td>-157.84889</td>\n",
-       "      <td>32.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>USC00511918</td>\n",
-       "      <td>HONOLULU OBSERVATORY 702.2, HI US</td>\n",
-       "      <td>21.31520</td>\n",
-       "      <td>-157.99920</td>\n",
-       "      <td>0.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>USC00516128</td>\n",
-       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
-       "      <td>21.33310</td>\n",
-       "      <td>-157.80250</td>\n",
-       "      <td>152.4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id      station                                    name  latitude  \\\n",
-       "0   1  USC00519397                    WAIKIKI 717.2, HI US  21.27160   \n",
-       "1   2  USC00513117                    KANEOHE 838.1, HI US  21.42340   \n",
-       "2   3  USC00514830  KUALOA RANCH HEADQUARTERS 886.9, HI US  21.52130   \n",
-       "3   4  USC00517948                       PEARL CITY, HI US  21.39340   \n",
-       "4   5  USC00518838              UPPER WAHIAWA 874.3, HI US  21.49920   \n",
-       "5   6  USC00519523      WAIMANALO EXPERIMENTAL FARM, HI US  21.33556   \n",
-       "6   7  USC00519281                     WAIHEE 837.5, HI US  21.45167   \n",
-       "7   8  USC00511918       HONOLULU OBSERVATORY 702.2, HI US  21.31520   \n",
-       "8   9  USC00516128            MANOA LYON ARBO 785.2, HI US  21.33310   \n",
-       "\n",
-       "   longitude  elevation  \n",
-       "0 -157.81680        3.0  \n",
-       "1 -157.80150       14.6  \n",
-       "2 -157.83740        7.0  \n",
-       "3 -157.97510       11.9  \n",
-       "4 -158.01110      306.6  \n",
-       "5 -157.71139       19.5  \n",
-       "6 -157.84889       32.9  \n",
-       "7 -157.99920        0.9  \n",
-       "8 -157.80250      152.4  "
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "station_df = pd.read_sql_query(\"SELECT * FROM Station\", session.bind)\n",
-    "station_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>station</th>\n",
-       "      <th>precipitation (in)</th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>elevation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>USC00518838</td>\n",
-       "      <td>2.33</td>\n",
-       "      <td>5</td>\n",
-       "      <td>UPPER WAHIAWA 874.3, HI US</td>\n",
-       "      <td>21.49920</td>\n",
-       "      <td>-158.01110</td>\n",
-       "      <td>306.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>USC00519281</td>\n",
-       "      <td>2.23</td>\n",
-       "      <td>7</td>\n",
-       "      <td>WAIHEE 837.5, HI US</td>\n",
-       "      <td>21.45167</td>\n",
-       "      <td>-157.84889</td>\n",
-       "      <td>32.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>USC00519523</td>\n",
-       "      <td>2.19</td>\n",
-       "      <td>6</td>\n",
-       "      <td>WAIMANALO EXPERIMENTAL FARM, HI US</td>\n",
-       "      <td>21.33556</td>\n",
-       "      <td>-157.71139</td>\n",
-       "      <td>19.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>USC00514830</td>\n",
-       "      <td>1.96</td>\n",
-       "      <td>3</td>\n",
-       "      <td>KUALOA RANCH HEADQUARTERS 886.9, HI US</td>\n",
-       "      <td>21.52130</td>\n",
-       "      <td>-157.83740</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>USC00516128</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>9</td>\n",
-       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
-       "      <td>21.33310</td>\n",
-       "      <td>-157.80250</td>\n",
-       "      <td>152.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>USC00513117</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>2</td>\n",
-       "      <td>KANEOHE 838.1, HI US</td>\n",
-       "      <td>21.42340</td>\n",
-       "      <td>-157.80150</td>\n",
-       "      <td>14.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>USC00519397</td>\n",
-       "      <td>1.38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>WAIKIKI 717.2, HI US</td>\n",
-       "      <td>21.27160</td>\n",
-       "      <td>-157.81680</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>USC00511918</td>\n",
-       "      <td>0.63</td>\n",
-       "      <td>8</td>\n",
-       "      <td>HONOLULU OBSERVATORY 702.2, HI US</td>\n",
-       "      <td>21.31520</td>\n",
-       "      <td>-157.99920</td>\n",
-       "      <td>0.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>USC00517948</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4</td>\n",
-       "      <td>PEARL CITY, HI US</td>\n",
-       "      <td>21.39340</td>\n",
-       "      <td>-157.97510</td>\n",
-       "      <td>11.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       station  precipitation (in)  id  \\\n",
-       "0  USC00518838                2.33   5   \n",
-       "1  USC00519281                2.23   7   \n",
-       "2  USC00519523                2.19   6   \n",
-       "3  USC00514830                1.96   3   \n",
-       "4  USC00516128                1.45   9   \n",
-       "5  USC00513117                1.44   2   \n",
-       "6  USC00519397                1.38   1   \n",
-       "7  USC00511918                0.63   8   \n",
-       "8  USC00517948                 NaN   4   \n",
-       "\n",
-       "                                     name  latitude  longitude  elevation  \n",
-       "0              UPPER WAHIAWA 874.3, HI US  21.49920 -158.01110      306.6  \n",
-       "1                     WAIHEE 837.5, HI US  21.45167 -157.84889       32.9  \n",
-       "2      WAIMANALO EXPERIMENTAL FARM, HI US  21.33556 -157.71139       19.5  \n",
-       "3  KUALOA RANCH HEADQUARTERS 886.9, HI US  21.52130 -157.83740        7.0  \n",
-       "4            MANOA LYON ARBO 785.2, HI US  21.33310 -157.80250      152.4  \n",
-       "5                    KANEOHE 838.1, HI US  21.42340 -157.80150       14.6  \n",
-       "6                    WAIKIKI 717.2, HI US  21.27160 -157.81680        3.0  \n",
-       "7       HONOLULU OBSERVATORY 702.2, HI US  21.31520 -157.99920        0.9  \n",
-       "8                       PEARL CITY, HI US  21.39340 -157.97510       11.9  "
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_df = pd.merge(trip_precipitation_df, station_df, on=\"station\")\n",
-    "merged_df\n"
    ]
   },
   {
