--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,7 +1534,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('USC00519281')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
+    "# highest temperature recorded, and average temperature of the most active station.\n",
+    "most_active_station = session.query(Measurement.station).\\\n",
+    "    group_by(Measurement.station).\\\n",
+    "    order_by(func.count(Measurement.station).desc()).first()\n",
+    "most_active_station\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1543,19 +1568,17 @@
      "text": [
       "The lowest temperature recorded at station USC00519281 is 54.0 degrees.\n",
       "The highest temperature recorded at station USC00519281 is 85.0 degrees.\n",
-      "The average at station USC00519281 is 71.66 degrees.\n"
+      "The average temperature at station USC00519281 is 71.66 degrees.\n"
      ]
     }
    ],
    "source": [
-    "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature of the most active station.\n",
-    "most_active_station = session.query(Measurement.station, func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
-    "    filter(Measurement.station==\"USC00519281\").all()\n",
+    "most_active_station_data = session.query(Measurement.station, func.min(Measurement.tobs), func.max(Measurement.tobs), func.avg(Measurement.tobs)).\\\n",
+    "    filter(Measurement.station == most_active_station[0]).all()\n",
     "\n",
-    "print(\"The lowest temperature recorded at station \" + most_active_station[0][0] + \" is \" + str(most_active_station[0][1]) + \" degrees.\")\n",
-    "print(\"The highest temperature recorded at station \" + most_active_station[0][0] + \" is \" + str(most_active_station[0][2]) + \" degrees.\")\n",
-    "print(\"The average at station \" + most_active_station[0][0] + \" is \" + str(round(most_active_station[0][3], 2)) + \" degrees.\")\n"
+    "print(\"The lowest temperature recorded at station \" + most_active_station_data[0][0] + \" is \" + str(most_active_station_data[0][1]) + \" degrees.\")\n",
+    "print(\"The highest temperature recorded at station \" + most_active_station_data[0][0] + \" is \" + str(most_active_station_data[0][2]) + \" degrees.\")\n",
+    "print(\"The average temperature at station \" + most_active_station_data[0][0] + \" is \" + str(round(most_active_station_data[0][3], 2)) + \" degrees.\")\n"
    ]
   },
   {
