added map of station locations

--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -131,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1230df908>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x121edb588>,\n",
        " 'prcp': 0.08,\n",
        " 'date': '2010-01-01',\n",
        " 'id': 1,\n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "Text(0, 0.5, 'Average Precipitation (in)')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "max                      2.380000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "('USC00519281')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
        " ('2016-08-19', 79.0)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
        " 79.0]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
        "[(74.94411764705882)]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
        "[(71.04152933421226)]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
        "Ttest_indResult(statistic=31.60372399000329, pvalue=3.9025129038616655e-191)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1753,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1796,7 @@
        "[(61.0, 69.75510204081633, 75.0)]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
        " ('USC00517948', None, 21.3934, -157.9751, 11.9)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
        "8  USC00517948                 NaN  21.39340 -157.97510       11.9"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2016,7 +2016,7 @@
        "[(62.0, 69.15384615384616, 77.0)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2045,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,7 @@
        " (60.0, 67.89090909090909, 76.0)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2153,7 @@
        "03-05  60.0  67.890909  76.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2167,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -2178,7 +2178,7 @@
        "Text(0, 0.5, 'Temperature (F)')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2198,6 +2198,64 @@
     "area_plot = normals_df.plot.area(stacked=False, rot=45, title=\"Temperature Normals for Each Day of Trip\")\n",
     "area_plot.set_xlabel(\"Date\")\n",
     "area_plot.set_ylabel(\"Temperature (F)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using the template add the hotel marks to the heatmap\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Station Name</dt><dd>{station}</dd>\n",
+    "<dt>State</dt><dd>Hawaii</dd>\n",
+    "<dt>Elevation</dt><dd>{elevation}</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "# Store the DataFrame Row\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in trip_precipitation_df.iterrows()]\n",
+    "locations = trip_precipitation_df[[\"latitude\", \"longitude\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67e898470f72427f8ef8e8d331089e34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(border='1px solid black', height='300px', margin='0 auto 0 auto', padding='1px', wi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import gmaps\n",
+    "\n",
+    "# set layout properties\n",
+    "figure_layout = {\n",
+    "    'width': '400px',\n",
+    "    'height': '300px',\n",
+    "    'border': '1px solid black',\n",
+    "    'padding': '1px',\n",
+    "    'margin': '0 auto 0 auto'\n",
+    "}\n",
+    "fig = gmaps.figure(layout=figure_layout)\n",
+    "# Assign the marker layer to a variable\n",
+    "markers = gmaps.marker_layer(locations, info_box_content= hotel_info)\n",
+    "# Add the layer to the map\n",
+    "fig.add_layer(markers)\n",
+    "fig\n"
    ]
   },
   {
